# zkTwitter

./: .gitignore  AUTOMATED_SOCIAL_PROOF.md  README.md  design.md  self-proof-sample.json  test-self-callback.sh  zkCircuits.md
circuits/: INSTALL.md  README.md  package-lock.json  package.json
circuits/generation/: birthYearParser.circom  generationConfig.circom  generationMembership.circom
circuits/primitives/: comparators.circom  poseidon.circom
circuits/scripts/: buildWitness.mjs  compile-social.sh  compile.sh  prove.sh  setup-social.sh  setup.sh
circuits/social/: merkleMembership.circom  socialProof.circom
circuits/tests/: generationMembership.test.mjs
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/circuits/: generationMembership.wasm  generationMembership_final.zkey  socialProof.wasm
frontend/src/: App.css  App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: DisclosureControls.tsx  Navbar.css  (+1 more)
server/: .gitignore  README.md  package-lock.json  package.json  test-self-simulation.ts  tsconfig.json
server/circuits/: socialProof_verification_key.json  verification_key.json
server/prisma/: schema.prisma  seed.ts
server/scripts/: buildGenerationWitness.mjs  cleanMyAccount.sh  debugSocialProof.mjs  seedUsers.ts
server/src/: index.ts
sp1/: Cargo.toml  README.md  sp1.md
sp1/cli/aggregator-cli/: Cargo.toml  build.rs
sp1/cli/aggregator-cli/src/: main.rs
sp1/fixtures/: sample_input.json
sp1/programs/aggregator/: Cargo.toml
sp1/programs/aggregator/src/: main.rs
(+43 files in other folders)
