[workspace]
members = [
  "programs/aggregator",
  "cli/aggregator-cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sp1-zkvm = "5.2"
sp1-sdk = "5.2"
sp1-build = "5.2"
thiserror = "1"
base64 = "0.21"
hex = "0.4"
