[package]
name = "aggregator-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sp1-sdk.workspace = true
thiserror.workspace = true
clap = { version = "4", features = ["derive"] }
base64.workspace = true
hex.workspace = true

[build-dependencies]
sp1-build.workspace = true
